added digicam post processing

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -73,7 +73,7 @@ r.Lumen.Reflections.HardwareRayTracing.Translucent.Refraction.EnableForProject=T
 r.MegaLights.EnableForProject=False
 r.RayTracing.Shadows=False
 r.Shadow.Virtual.Enable=1
-r.RayTracing=True
+r.RayTracing=False
 r.RayTracing.UseTextureLod=False
 r.PathTracing=True
 r.GenerateMeshDistanceFields=True
@@ -106,11 +106,11 @@ r.DefaultFeature.MotionBlur=False
 r.DefaultFeature.LensFlare=False
 r.TemporalAA.Upsampling=True
 r.AntiAliasingMethod=0
-r.MSAACount=4
+r.MSAACount=1
 r.DefaultFeature.LightUnits=1
 r.DefaultBackBufferPixelFormat=4
-r.ScreenPercentage.Default=100.000000
-r.ScreenPercentage.Default.Desktop.Mode=1
+r.ScreenPercentage.Default=10.000000
+r.ScreenPercentage.Default.Desktop.Mode=0
 r.ScreenPercentage.Default.Mobile.Mode=0
 r.ScreenPercentage.Default.VR.Mode=0
 r.ScreenPercentage.Default.PathTracer.Mode=0
