added enemy spawner, crosshair, basic killing, shooting a bunch

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -6,15 +6,18 @@
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/DefaultMap.DefaultMap
 LocalMapOptions=
-TransitionMap=
+TransitionMap=None
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/Maps/DefaultMap.DefaultMap
-ServerDefaultMap=/Engine/Maps/Entry
-GlobalDefaultGameMode=/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode.BP_FirstPersonGameMode_C
+ServerDefaultMap=/Game/Maps/DefaultMap.DefaultMap
+GlobalDefaultGameMode=/Game/Blueprints/BP_FirstPersonGameMode.BP_FirstPersonGameMode_C
 GlobalDefaultServerGameMode=None
++GameModeMapPrefixes=(Name="",GameMode="/Game/Blueprints/BP_FirstPersonGameMode.BP_FirstPersonGameMode_C")
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
