--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -23,7 +23,7 @@ GlobalDefaultServerGameMode=None
 r.Mobile.ShadingPath=0
 r.Mobile.AllowDeferredShadingOpenGL=False
 r.Mobile.SupportGPUScene=True
-r.Mobile.AntiAliasing=1
+r.Mobile.AntiAliasing=0
 r.Mobile.FloatPrecisionMode=0
 r.Mobile.AllowDitheredLODTransition=False
 r.Mobile.VirtualTextures=False
@@ -99,7 +99,7 @@ r.Deferred.SupportPrimitiveAlphaHoldout=False
 r.DefaultFeature.Bloom=True
 r.DefaultFeature.AmbientOcclusion=True
 r.DefaultFeature.AmbientOcclusionStaticFraction=True
-r.DefaultFeature.AutoExposure=False
+r.DefaultFeature.AutoExposure=True
 r.DefaultFeature.AutoExposure.Method=0
 r.DefaultFeature.AutoExposure.Bias=1.000000
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
