Added menu and pause menu

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -13,7 +13,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Maps/DefaultMap.DefaultMap
+GameDefaultMap=/Game/Maps/MainMenuMap.MainMenuMap
 ServerDefaultMap=/Game/Maps/DefaultMap.DefaultMap
 GlobalDefaultGameMode=/Game/Blueprints/BP_FirstPersonGameMode.BP_FirstPersonGameMode_C
 GlobalDefaultServerGameMode=None
@@ -113,7 +113,7 @@ r.MSAACount=1
 r.DefaultFeature.LightUnits=1
 r.DefaultBackBufferPixelFormat=4
 r.ScreenPercentage.Default=100.000000
-r.ScreenPercentage.Default.Desktop.Mode=0
+r.ScreenPercentage.Default.Desktop.Mode=1
 r.ScreenPercentage.Default.Mobile.Mode=0
 r.ScreenPercentage.Default.VR.Mode=0
 r.ScreenPercentage.Default.PathTracer.Mode=0
